methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur()){
    return false
    } else {
    avance()
    if(getCouleurSol()==color.green){
      recule()
      return true
    }
    recule()
    return false
  }
}